Some cosmetic changes. Fade out of button after asking a question, some margin to avoid interference of the button with scrollbars, reduced timeframe upon appearance and changed modal window description text.

--- a/app/assets/stylesheets/editor.css.scss
+++ b/app/assets/stylesheets/editor.css.scss
@@ -92,5 +92,6 @@ button i.fa-spin {
 #requestCommentsButton {
   position: relative;
   margin-top: -50px;
+  margin-right: 25px;
   float: right;
 }
